fix(styling): :bug: updated to text-align left for blog-post
HEAVB-17

--- a/src/styles/blog/blog-post.scss
+++ b/src/styles/blog/blog-post.scss
@@ -20,7 +20,7 @@
   width: 100%;
   max-width: 1120px;
   height: fit-content;
-  text-align: justify;
+  text-align: left;
   @media (max-width: $media-xs) {
     margin-top: 0em;
   }
